# marble-digital-items

./: build-and-copy.sh
contracts/marble/: CMakeLists.txt
contracts/marble/include/: common.hpp  marble.hpp  setting.hpp
contracts/marble/include/core/: groups.hpp  items.hpp
contracts/marble/include/layers/: frames.hpp
contracts/marble/src/: CMakeLists.txt  marble.cpp  setting.cpp
contracts/marble/src/core/: groups.cpp  items.cpp
